Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/crpe.h


#define PE_UNCHANGED       -1
#define PE_UNCHANGED_COLOR (COLORREF) -2
typedef struct PESectionOptions 
{
    WORD StructSize;            
    short visible,              
          newPageBefore,        
          newPageAfter,
          keepTogether,
          suppressBlankSection,
          resetPageNAfter,
          printAtBottomOfPage;
    COLORREF backgroundColor;   
    short underlaySection;      
    short showArea;             
    short freeFormPlacement;
    short reserveMinimumPageFooter; 
}PESectionOptions;
#define PE_SIZEOF_SECTION_OPTIONS (sizeof (PESectionOptions))
BOOL CRPE_API PESetSectionFormat (short printJob,
                                  short sectionCode,
                                  PESectionOptions FAR *options);
BOOL CRPE_API PEGetSectionFormat (short printJob,
                                  short sectionCode,
                                  PESectionOptions FAR *options);
BOOL CRPE_API PESetAreaFormat (short printJob,
                               short areaCode,
                               PESectionOptions FAR *options);
BOOL CRPE_API PEGetAreaFormat (short printJob,
                               short areaCode,
                               PESectionOptions FAR *options);
#define PE_FIELDS    0x0001
#define PE_TEXT      0x0002
BOOL CRPE_API PESetFont (short printJob,
                         short sectionCode,
                         short scopeCode,     
                         const char FAR *faceName,  
                         short fontFamily,    
                         short fontPitch,     
                         short charSet,       
                         short pointSize,     
                         short isItalic,      
                         short isUnderlined,  
                         short isStruckOut,   
                         short weight);       
short CRPE_API PEGetNSubreportsInSection (short printJob,
                                          short sectionCode);
DWORD CRPE_API PEGetNthSubreportInSection (short printJob,
                                           short sectionCode,
                                           short subreportN);
#define PE_GT_BARCHART              0
#define PE_GT_LINECHART             1
#define PE_GT_AREACHART             2
#define PE_GT_PIECHART              3
#define PE_GT_DOUGHNUTCHART         4
#define PE_GT_THREEDRISERCHART      5
#define PE_GT_THREEDSURFACECHART    6
#define PE_GT_SCATTERCHART          7
#define PE_GT_RADARCHART            8
#define PE_GT_BUBBLECHART           9
#define PE_GT_STOCKCHART            10
#define PE_GT_USERDEFINEDCHART      50      
#define PE_GT_UNKNOWNTYPECHART      100     
#define PE_GST_SIDEBYSIDEBARCHART                   0
#define PE_GST_STACKEDBARCHART                      1
#define PE_GST_PERCENTBARCHART                      2
#define PE_GST_FAKED3DSIDEBYSIDEBARCHART            3
#define PE_GST_FAKED3DSTACKEDBARCHART               4
#define PE_GST_FAKED3DPERCENTBARCHART               5
#define PE_GST_REGULARLINECHART                     10
#define PE_GST_STACKEDLINECHART                     11
#define PE_GST_PERCENTAGELINECHART                  12
#define PE_GST_LINECHARTWITHMARKERS                 13
#define PE_GST_STACKEDLINECHARTWITHMARKERS          14
#define PE_GST_PERCENTAGELINECHARTWITHMARKERS       15
#define PE_GST_ABSOLUTEAREACHART                    20
#define PE_GST_STACKEDAREACHART                     21
#define PE_GST_PERCENTAREACHART                     22
#define PE_GST_FAKED3DABSOLUTEAREACHART             23
#define PE_GST_FAKED3DSTACKEDAREACHART              24
#define PE_GST_FAKED3DPERCENTAREACHART              25
#define PE_GST_REGULARPIECHART                      30
#define PE_GST_FAKED3DREGULARPIECHART               31
#define PE_GST_MULTIPLEPIECHART                     32
#define PE_GST_MULTIPLEPROPORTIONALPIECHART         33
#define PE_GST_REGULARDOUGHNUTCHART                 40
#define PE_GST_MULTIPLEDOUGHNUTCHART                41
#define PE_GST_MULTIPLEPROPORTIONALDOUGHNUTCHART    42
#define PE_GST_THREEDREGULARCHART                   50
#define PE_GST_THREEDPYRAMIDCHART                   51
#define PE_GST_THREEDOCTAGONCHART                   52
#define PE_GST_THREEDCUTCORNERSCHART                53
#define PE_GST_THREEDSURFACEREGULARCHART            60
#define PE_GST_THREEDSURFACEWITHSIDESCHART          61
#define PE_GST_THREEDSURFACEHONEYCOMBCHART          62
#define PE_GST_XYSCATTERCHART                       70
#define PE_GST_XYSCATTERDUALAXISCHART               71
#define PE_GST_XYSCATTERWITHLABELSCHART             72
#define PE_GST_XYSCATTERDUALAXISWITHLABELSCHART     73
#define PE_GST_REGULARRADARCHART                    80
#define PE_GST_STACKEDRADARCHART                    81
#define PE_GST_RADARDUALAXISCHART                   82
#define PE_GST_REGULARBUBBLECHART                   90
#define PE_GST_DUALAXISBUBBLECHART                  91
#define PE_GST_HIGHLOWCHART                         100
#define PE_GST_HIGHLOWOPENCLOSECHART                101
#define PE_GST_UNKNOWNSUBTYPECHART                  1000
typedef struct PEGraphTypeInfo
{
    WORD StructSize;
    short graphType;      
    short graphSubtype;   
} PEGraphTypeInfo;
#define PE_SIZEOF_GRAPH_TYPE_INFO (sizeof (PEGraphTypeInfo))
BOOL CRPE_API PEGetGraphTypeInfo(short printJob, 
                                 short sectionN, 
                                 short graphN, 
                                 PEGraphTypeInfo FAR * graphTypeInfo);
BOOL CRPE_API PESetGraphTypeInfo(short printJob, 
                                 short sectionN, 
                                 short graphN, 
                                 PEGraphTypeInfo FAR * graphTypeInfo);
#define PE_GTT_TITLE            0
#define PE_GTT_SUBTITLE         1
#define PE_GTT_FOOTNOTE         2
#define PE_GTT_SERIESTITLE      3
#define PE_GTT_GROUPSTITLE      4
#define PE_GTT_XAXISTITLE       5
#define PE_GTT_YAXISTITLE       6
#define PE_GTT_ZAXISTITLE       7
#define PE_GTF_TITLEFONT        0
#define PE_GTF_SUBTITLEFONT     1
#define PE_GTF_FOOTNOTEFONT     2
#define PE_GTF_GROUPSTITLEFONT  3
#define PE_GTF_DATATITLEFONT    4
#define PE_GTF_LEGENDFONT       5
#define PE_GTF_GROUPLABELSFONT  6
#define PE_GTF_DATALABELSFONT   7
#define PE_FACE_NAME_LEN 64
typedef struct PEFontColorInfo
{
    WORD StructSize;
    char faceName[PE_FACE_NAME_LEN]; 
    short fontFamily; 
    short fontPitch;  
    short charSet;   
    short pointSize;  
    short isItalic;   
    short isUnderlined; 
    short isStruckOut;  
    short weight;       
    COLORREF color;     
    short twipSize;     
}PEFontColorInfo;
#define PE_SIZEOF_FONT_COLOR_INFO (sizeof(PEFontColorInfo))
BOOL CRPE_API PEGetGraphTextInfo(short printJob, 
                                 short sectionN, 
                                 short graphN, 
                                 WORD titleType,     
                                 HANDLE FAR * title, 
                                 short FAR * titleLength);
BOOL CRPE_API PESetGraphTextInfo(short printJob, 
                                 short sectionN, 
                                 short graphN, 
                                 WORD titleType, 
                                 LPCSTR title);
BOOL CRPE_API PESetGraphTextDefaultOption (short printJob,
                                    short sectionN, 
                                    short graphN, 
                                    WORD titleType,     
                                    BOOL useDefault);
BOOL CRPE_API PEGetGraphTextDefaultOption (short printJob,
                                    short sectionN, 
                                    short graphN, 
                                    WORD titleType,     
                                    BOOL FAR * useDefault);
BOOL CRPE_API PEGetGraphFontInfo(short printJob, 
                                 short sectionN, 
                                 short graphN, 
                                 WORD titleFontType,  
                                 PEFontColorInfo FAR * fontColourInfo);
BOOL CRPE_API PESetGraphFontInfo(short printJob, 
                                 short sectionN, 
                                 short graphN, 
                                 WORD titleFontType,  
                                 PEFontColorInfo FAR * fontColourInfo);
#define PE_GLP_PLACEUPPERRIGHT      0
#define PE_GLP_PLACEBOTTOMCENTER    1
#define PE_GLP_PLACETOPCENTER       2
#define PE_GLP_PLACERIGHT           3
#define PE_GLP_PLACELEFT            4
#define PE_GLL_PERCENTAGE           0
#define PE_GLL_AMOUNT               1
#define PE_GLL_CUSTOM               2   
typedef struct PEGraphOptionInfo
{
    WORD StructSize;
    short graphColour; 
    short showLegend; 
    short legendPosition; 
    short pieSize; 
    short detachedPieSlice; 
    short barSize; 
    short verticalBars; 
    short markerSize; 
    short markerShape; 
    short dataPoints; 
    short dataValueNumberFormat; 
    short viewingAngle; 
    short legendLayout;     
} PEGraphOptionInfo;
BOOL CRPE_API PEGetGraphOptionInfo(short printJob, 
                                   short sectionN, 
                                   short graphN, 
                                   PEGraphOptionInfo FAR * graphOptionInfo);
BOOL CRPE_API PESetGraphOptionInfo(short printJob, 
                                   short sectionN, 
                                   short graphN,
                                   PEGraphOptionInfo FAR * graphOptionInfo);
#define SECTION_VISIBILITY               58
#define NEW_PAGE_BEFORE                  60
#define NEW_PAGE_AFTER                   61
#define KEEP_SECTION_TOGETHER            62
#define SUPPRESS_BLANK_SECTION           63
#define RESET_PAGE_N_AFTER               64
#define PRINT_AT_BOTTOM_OF_PAGE          65
#define UNDERLAY_SECTION                 66
#define SECTION_BACK_COLOUR              67
#define PE_FFN_AREASECTION_VISIBILITY           58  
#define PE_FFN_SECTION_VISIBILITY               58  
#define PE_FFN_SHOW_AREA                        59  
#define PE_FFN_NEW_PAGE_BEFORE                  60  
#define PE_FFN_NEW_PAGE_AFTER                   61  
#define PE_FFN_KEEP_TOGETHER                    62  
#define PE_FFN_SUPPRESS_BLANK_SECTION           63  
#define PE_FFN_RESET_PAGE_N_AFTER               64  
#define PE_FFN_PRINT_AT_BOTTOM_OF_PAGE          65  
#define PE_FFN_UNDERLAY_SECTION                 66  
#define PE_FFN_SECTION_BACK_COLOUR              67  
#define PE_FFN_SECTION_BACK_COLOR               67  
BOOL CRPE_API PEGetAreaFormatFormula (short printJob,
                                      short areaCode,
                                      short formulaName, 
                                      HANDLE FAR *textHandle,
                                      short FAR *textLength);
BOOL CRPE_API PESetAreaFormatFormula (short printJob,
                                      short areaCode,
                                      short formulaName, 
                                      const char FAR *formulaString);
BOOL CRPE_API PEGetSectionFormatFormula (short printJob,
                                         short sectionCode,
                                         short formulaName, 
                                         HANDLE FAR *textHandle,
                                         short FAR *textLength);
BOOL CRPE_API PESetSectionFormatFormula (short printJob,
                                         short sectionCode,
                                         short formulaName, 
                                         const char FAR *formulaString);
#define PE_WORD_LEN           2
#define PE_WORD_LEN          2
                                 BOOL ( CALLBACK * callbackProc )(short eventID, void *param, void *userData),
#else
                                 BOOL ( CALLBACK __export * callbackProc )(short eventID, void *param, void *userData),
#endif