Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/global32.bas


    ' use 0 to turn off, 1 to turn on and PE_UNCHANGED to preserve each attribute
    Visible As Integer
    NewPageBefore As Integer
    NewPageAfter As Integer
    KeepTogether As Integer
    SuppressBlankSection As Integer
    ResetPageNAfter As Integer
    PrintAtBottomOfPage As Integer
    backgroundColor As Long   ' Use PE_UNCHANGED_COLOR to preserve the
                              ' existing color.
    underlaySection As Integer
    showArea As Integer
    freeFormPlacement As Integer
    reserveMinimumPageFooter As Integer 'BOOLEAN or PE_UNCHANGED; Sets the size of the Page Footer area                        // to the size of the largest Page Footer section. Used with
                     ' PEGetAreaFormat/PESetAreaFormat; ignored when used with PEGetSectionFormat/PESetSectionFormat.
End Type

Global Const PE_SIZEOF_SECTION_OPTIONS = 12 * PE_WORD_LEN + 1 * 4

'Format formula name
'Old naming convention
Global Const SECTION_VISIBILITY = 58
Global Const NEW_PAGE_BEFORE = 60
Global Const NEW_PAGE_AFTER = 61
Global Const KEEP_SECTION_TOGETHER = 62
Global Const SUPPRESS_BLANK_SECTION = 63
Global Const RESET_PAGE_N_AFTER = 64
Global Const PRINT_AT_BOTTOM_OF_PAGE = 65
Global Const UNDERLAY_SECTION = 66
Global Const SECTION_BACK_COLOUR = 67

'New naming convention
Global Const PE_FFN_AREASECTION_VISIBILITY = 58
Global Const PE_FFN_SECTION_VISIBILITY = 58
Global Const PE_FFN_SHOW_AREA = 59
Global Const PE_FFN_NEW_PAGE_BEFORE = 60
Global Const PE_FFN_NEW_PAGE_AFTER = 61
Global Const PE_FFN_KEEP_SECTION_TOGETHER = 62
Global Const PE_FFN_KEEP_TOGETHER = 62
Global Const PE_FFN_SUPPRESS_BLANK_SECTION = 63
Global Const PE_FFN_RESET_PAGE_N_AFTER = 64
Global Const PE_FFN_PRINT_AT_BOTTOM_OF_PAGE = 65
Global Const PE_FFN_UNDERLAY_SECTION = 66
Global Const PE_FFN_SECTION_BACK_COLOUR = 67
Global Const PE_FFN_SECTION_BACK_COLOR = 67

Declare Function PEGetSectionFormatFormula Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%, ByVal formulaName%, TextHandle As Long, TextLength%) As Integer

Declare Function PESetSectionFormatFormula Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%, ByVal formulaName%, ByVal formulaString$) As Integer

Declare Function PEGetSectionFormat Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%, Options As PESectionOptions) As Integer

Declare Function PESetSectionFormat Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%, Options As PESectionOptions) As Integer

' Setting area format
' -------------------
                                                                                                               
Declare Function PEGetAreaFormatFormula Lib "crpe32.dll" (ByVal printJob%, ByVal areaCode%, ByVal formulaName%, TextHandle As Long, TextLength%) As Integer

Declare Function PESetAreaFormatFormula Lib "crpe32.dll" (ByVal printJob%, ByVal areaCode%, ByVal formulaName%, ByVal formulaString$) As Integer

Declare Function PEGetAreaFormat Lib "crpe32.dll" (ByVal printJob%, ByVal areaCode%, Options As PESectionOptions) As Integer

Declare Function PESetAreaFormat Lib "crpe32.dll" (ByVal printJob%, ByVal areaCode%, Options As PESectionOptions) As Integer


' Setting font info
' -----------------

' values for ScopeCode - may be ORed together
Global Const PE_FIELDS = 1
Global Const PE_TEXT = 2

Global Const PE_UNCHANGED = -1

' to preserve the existing setting, use the following
'   for FontFamily%    use  FF_DONTCARE
'   for FontPitch%     use  DEFAULT_PITCH
'   for CharSet%       use  DEFAULT_CHARSET
'   for PointSize%     use  0
'   for isItalic%      use  PE_UNCHANGED
'   for isUnderlined%  use  PE_UNCHANGED
'   for isStruckOut%   use  PE_UNCHANGED
'   for Weight%        use  0
Declare Function PESetFont Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%, ByVal scopecode%, ByVal faceName$, ByVal fontFamily%, ByVal fontPitch%, ByVal charSet%, ByVal pointSize%, ByVal isItalic%, ByVal isUnderlined%, ByVal isStruckOut%, ByVal weight%) As Integer

' Subreports
' ----------
Declare Function PEGetNSubreportsInSection Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%) As Integer

Declare Function PEGetNthSubreportInSection Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%, ByVal subreportN%) As Long


'
' G R A P H I N G
'
' - graph type

Global Const PE_GT_BARCHART = 0
Global Const PE_GT_LINECHART = 1
Global Const PE_GT_AREACHART = 2
Global Const PE_GT_PIECHART = 3
Global Const PE_GT_DOUGHNUTCHART = 4
Global Const PE_GT_THREEDRISERCHART = 5
Global Const PE_GT_THREEDSURFACECHART = 6
Global Const PE_GT_SCATTERCHART = 7
Global Const PE_GT_RADARCHART = 8
Global Const PE_GT_BUBBLECHART = 9
Global Const PE_GT_STOCKCHART = 10
Global Const PE_GT_USERDEFINEDCHART = 50        ' for PEGetGraphTypeInfo only -
Global Const PE_GT_UNKNOWNTYPECHART = 100       ' do not use in PESetGraphTypeInfo.

' graph subtype
' - bar charts
Global Const PE_GST_SIDEBYSIDEBARCHART = 0
Global Const PE_GST_STACKEDBARCHART = 1
Global Const PE_GST_PERCENTBARCHART = 2
Global Const PE_GST_FAKED3DSIDEBYSIDEBARCHART = 3
Global Const PE_GST_FAKED3DSTACKEDBARCHART = 4
Global Const PE_GST_FAKED3DPERCENTBARCHART = 5
                                                    
' - line charts
Global Const PE_GST_REGULARLINECHART = 10
Global Const PE_GST_STACKEDLINECHART = 11
Global Const PE_GST_PERCENTAGELINECHART = 12
Global Const PE_GST_LINECHARTWITHMARKERS = 13
Global Const PE_GST_STACKEDLINECHARTWITHMARKERS = 14
Global Const PE_GST_PERCENTAGELINECHARTWITHMARKERS = 15
                                                    
' - charts
Global Const PE_GST_ABSOLUTEAREACHART = 20
Global Const PE_GST_STACKEDAREACHART = 21
Global Const PE_GST_PERCENTAREACHART = 22
Global Const PE_GST_FAKED3DABSOLUTEAREACHART = 23
Global Const PE_GST_FAKED3DSTACKEDAREACHART = 24
Global Const PE_GST_FAKED3DPERCENTAREACHART = 25
                                                    
' - pie charts
Global Const PE_GST_REGULARPIECHART = 30
Global Const PE_GST_FAKED3DREGULARPIECHART = 31
Global Const PE_GST_MULTIPLEPIECHART = 32
Global Const PE_GST_MULTIPLEPROPORTIONALPIECHART = 33
                                                    
' - mmm, doughnut charts
Global Const PE_GST_REGULARDOUGHNUTCHART = 40
Global Const PE_GST_MULTIPLEDOUGHNUTCHART = 41
Global Const PE_GST_MULTIPLEPROPORTIONALDOUGHNUTCHART = 42

' 3D riser charts
Global Const PE_GST_THREEDREGULARCHART = 50
Global Const PE_GST_THREEDPYRAMIDCHART = 51
Global Const PE_GST_THREEDOCTAGONCHART = 52
Global Const PE_GST_THREEDCUTCORNERSCHART = 53
                                                        
' 3D surface charts
Global Const PE_GST_THREEDSURFACEREGULARCHART = 60
Global Const PE_GST_THREEDSURFACEWITHSIDESCHART = 61
Global Const PE_GST_THREEDSURFACEHONEYCOMBCHART = 62
                                                    
' scatter charts
Global Const PE_GST_XYSCATTERCHART = 70
Global Const PE_GST_XYSCATTERDUALAXISCHART = 71
Global Const PE_GST_XYSCATTERWITHLABELSCHART = 72
Global Const PE_GST_XYSCATTERDUALAXISWITHLABELSCHART = 73
                                                    
' radar charts
Global Const PE_GST_REGULARRADARCHART = 80
Global Const PE_GST_STACKEDRADARCHART = 81
Global Const PE_GST_RADARDUALAXISCHART = 82
                                                    
' bubble charts
Global Const PE_GST_REGULARBUBBLECHART = 90
Global Const PE_GST_DUALAXISBUBBLECHART = 91
                                                    
' stocked charts
Global Const PE_GST_HIGHLOWCHART = 100
Global Const PE_GST_HIGHLOWDUALAXISCHART = 101
Global Const PE_GST_HIGHLOWOPENCHART = 102
Global Const PE_GST_HIGHLOWOPENDUALAXISCHART = 103
Global Const PE_GST_HIGHLOWOPENCLOSECHART = 104
Global Const PE_GST_HIGHLOWOPENCLOSEDUALAXISCHART = 105

Global Const PE_GST_UNKNOWNSUBTYPECHART = 1000

Type PEGraphTypeInfo
    StructSize As Integer
    GraphType As Integer        ' PE_GT_*, PE_UNCHANGED for no change
    graphSubtype As Integer     ' PE_GST_*, PE_UNCHANGED for no change
End Type

Global Const PE_SIZEOF_GRAPH_TYPE_INFO = (3 * PE_WORD_LEN)

Declare Function PEGetGraphTypeInfo Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, graphTypeInfo As PEGraphTypeInfo) As Integer
Declare Function PESetGraphTypeInfo Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, graphTypeInfo As PEGraphTypeInfo) As Integer

' graph text

Global Const PE_GTT_TITLE = 0
Global Const PE_GTT_SUBTITLE = 1
Global Const PE_GTT_FOOTNOTE = 2
Global Const PE_GTT_SERIESTITLE = 3
Global Const PE_GTT_GROUPSTITLE = 4
Global Const PE_GTT_XAXISTITLE = 5
Global Const PE_GTT_YAXISTITLE = 6
Global Const PE_GTT_ZAXISTITLE = 7

' graph text fonts
Global Const PE_GTF_TITLEFONT = 0
Global Const PE_GTF_SUBTITLEFONT = 1
Global Const PE_GTF_FOOTNOTEFONT = 2
Global Const PE_GTF_GROUPSTITLEFONT = 3
Global Const PE_GTF_DATATITLEFONT = 4
Global Const PE_GTF_LEGENDFONT = 5
Global Const PE_GTF_GROUPLABELSFONT = 6
Global Const PE_GTF_DATALABELSFONT = 7

Global Const PE_FACE_NAME_LEN = 64

' Graph text max length
Global Const PE_GRAPH_TEXT_LEN = 128

Type PEFontColorInfo
    StructSize As Integer
    faceName As String * PE_FACE_NAME_LEN       ' empty string for no change
    fontFamily As Integer       ' FF_DONTCARE for no change
    fontPitch As Integer        ' DEFAULT_PITCH for no change
    charSet As Integer          ' DEFAULT_CHARSET for no change
    pointSize As Integer        ' 0 for no change
    isItalic As Integer         ' BOOL value, except use PE_UNCHANGED for no change.
    isUnderlined As Integer     ' BOOL value, except use PE_UNCHANGED for no change.
    isStruckOut As Integer      ' BOOL value, except use PE_UNCHANGED for no change.
    weight As Integer           ' 0 for no change
    color As Long               ' COLORREF - PE_UNCHANGED_COLOR for no change.
    twipSize As Integer         ' Font size in twips, 0 for no change.
                                ' Use one of pointSize or twipSize. If both pointSize and twipSize
                                ' are non-zero, twipSize will be used and pointSize will be ignored.
End Type

Global Const PE_SIZEOF_FONT_COLOR_INFO = PE_WORD_LEN + PE_FACE_NAME_LEN + (9 * PE_WORD_LEN) + PE_LONG_LEN

' titleType - PE_GTT_*
' title - HANDLE
Declare Function PEGetGraphTextInfo Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, ByVal titleType As Integer, Title As Long, titleLength As Integer) As Integer
Declare Function PESetGraphTextInfo Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, ByVal titleType As Integer, ByVal Title As String) As Integer

' enable/disable graph default titles
'
' titleType - PE_GTT_*
'
Declare Function PESetGraphTextDefaultOption Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, ByVal titleType As Integer, ByVal useDefault As Long) As Integer
Declare Function PEGetGraphTextDefaultOption Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, ByVal titleType As Integer, useDefault As Long) As Integer

' graph font
' titleFontType - PE_GTF_*
Declare Function PEGetGraphFontInfo Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, ByVal titleFontType As Integer, fontColourInfo As PEFontColorInfo) As Integer
Declare Function PESetGraphFontInfo Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, ByVal titleFontType As Integer, fontColourInfo As PEFontColorInfo) As Integer

' graph options
Global Const PE_GLP_PLACEUPPERRIGHT = 0
Global Const PE_GLP_PLACEBOTTOMCENTER = 1
Global Const PE_GLP_PLACETOPCENTER = 2
Global Const PE_GLP_PLACERIGHT = 3
Global Const PE_GLP_PLACELEFT = 4

' legend layout
'
Global Const PE_GLL_PERCENTAGE = 0
Global Const PE_GLL_AMOUNT = 1
Global Const PE_GLL_CUSTOM = 2   ' for PEGetGraphOptionInfo, do not use in PESetGraphOptionInfo.
